--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,3 +2,4 @@
         <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
         <h5>© Copyright todos los derechos reservados</h6>
     </footer> 
+    <script src="/js/header.js"></script>
