validaciones del lado del front-end para registro usuarios

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -14,33 +14,47 @@
 </head>
 <body>
     <%- include('./partials/header.ejs')%>
-
+   
+    
     <% if (locals.errors && errors.length > 0) { %>
         <% errors.forEach(error => { %>
             <p><%= error.email.msg %></p>
         <% }); %>
     <% } %>
+
+    
+
     <form action="/usuarios/register" method="POST" class="form-register" enctype="multipart/form-data">
         <h4>Registrate en Hebra Libre</h4>
+
+        <label for="name">NOMBRE</label>
         <div>
-            <label for="name">NOMBRE</label>
             <input class="controls" type="text" name="firstName" id="name" placeholder="ej: Juan" value="<%= locals.oldData ? oldData.firstName : null %>">
+            <p id="err-name" class="hidden"></p>
         </div>
+        <p id="err-name" class="hidden"></p>
+
         <% if (locals.errors && errors.firstName) { %>
             <div class="text-danger">
                 <%= errors.firstName.msg %>
             </div>
         <% } %>
 
+       
         <div>
             <label for="lastname">APELLIDO</label>
             <input class="controls" type="text" name="lastName" id="lastname" placeholder="ej: Pérez" value="<%= locals.oldData ? oldData.lastName : null %>">
         </div>
+        <p id="err-lastName" class="hidden"></p>
+
         <% if (locals.errors && errors.lastName) { %>
             <div class="text-danger">
                 <%= errors.lastName.msg %>
             </div>
         <% } %>
+
+     
+
         <div>
             <label for="category">CATEGORÍA</label>
             <select name="category" id="category" class="controls">
@@ -53,6 +67,7 @@
                 <% } else { %>
                     <option value="">No hay roles disponibles</option>
                 <% } %>
+            </select>       
         </div>
         <% if (locals.errors && errors.category) { %>
             <div class="text-danger">
@@ -62,33 +77,45 @@
 
         <div>
             <label for="email">EMAIL</label>
-            <input class="controls" type="text" name="email" id="email" placeholder="ej: juanperez@email.com" value="<%= locals.oldData ? oldData.email : null %>">
+            <input class="controls" type="text" name="email" id="email" placeholder="ej: juanperez@email.com" value="<%= locals.oldData ? oldData.email : null %>"> 
         </div>
+        <p id="err-email" class="hidden"></p>
+
         <% if (locals.errors && errors.email) { %>
             <div class="text-danger">
                 <%= errors.email.msg %>
             </div>
         <% } %>
 
+      
+
         <div>
             <label for="password">CONTRASEÑA</label>
             <input class="controls" type="password" name="password" id="password">
         </div>
+        <p id="err-password" class="hidden"></p>
+
         <% if (locals.errors && errors.password) { %>
             <div class="text-danger">
                 <%= errors.password.msg %>
             </div>
         <% } %>
 
+ 
+
         <div>
             <label for="avatar">FOTO DE PERFIL (.jpg, .png, .gif)</label>
             <input type="file" id="avatar" name="avatar" accept="image/*" class="form-img">
         </div>
+        <p id="err-avatar" class="hidden"></p>
+
         <% if (locals.errors && errors.avatar) { %>
             <div class="text-danger">
                 <%= errors.avatar.msg %>
             </div>
         <% } %>
+
+       
 
         <div>
             <button class="botom" type="submit">CREAR CUENTA</button>
@@ -96,6 +123,7 @@
         
         <p>¿Tienes una cuenta? <a href="/usuarios/login">Iniciar sesión</a></p>
     </form>
-    <%- include('./partials/footer.ejs')%>   
+    <%- include('./partials/footer.ejs')%> 
+    <script src="/js/validacionFormualrioRegister.js"></script>  
 </body>
 </html>
