--- a/public/css/register.css
+++ b/public/css/register.css
@@ -100,14 +100,27 @@ input.form-img{
     background-color: #6eacf7;
 }
 
-.text-danger{
+form .text-danger{
     color: red;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 
 
+.is-valid {
+    color: #198754;
+}
+  
+.is-invalid {
+    color: red;
+}
+
+.hidden {
+    display: none;
+}
+
+  
 /* Media Queries*/
 
 @media ( max-width: 767px ) {
