--- a/src/views/formEdicionProducto.ejs
+++ b/src/views/formEdicionProducto.ejs
@@ -21,30 +21,22 @@
 
             <h4>Edición de Producto</h4>
     
-            <form action="/productos/edit/<%=producto.id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="formulario" >
+            <form action="/productos/edit/<%=producto.id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="formulario">
                 <div class="campo">
                     <label for="name">Nombre del Producto:</label>
                     <input type="text" id="name" name="title" class="form-input" value="<%= producto.title %>">
+                    <div id="titleError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.title) { %>
-                    <div class="text-danger">
-                        <%= errors.title.msg %>
-                    </div>
-                <% } %>
-
+            
                 <div class="campo">
                     <label for="name">Color del Producto:</label>
                     <input type="text" id="name" name="colors" class="form-input" value="<%= producto.colors %>">
+                    <div id="colorsError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.colors) { %>
-                    <div class="text-danger">
-                        <%= errors.colors.msg %>
-                    </div>
-                <% } %>
-
+            
                 <div class="campo">
                     <label for="category" class="form-label">Categoría:</label>
-                    <select name="category" id="category"  class="options">
+                    <select name="category" id="category" class="options">
                         <% if (categorias.name == 'Productos Principales') { %>
                             <option value="Productos Principales" selected>Productos Principales</option>
                             <option value="En Oferta">En Oferta</option>
@@ -53,60 +45,41 @@
                             <option value="En Oferta" selected>En Oferta</option>
                         <% } %>
                     </select>
+                    <div id="categoryError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.category) { %>
-                    <div class="text-danger">
-                        <%= errors.category.msg %>
-                    </div>
-                <% } %> 
-
+            
                 <div class="campo">
                     <label for="price">Precio:</label>
                     <input type="text" id="price" name="price" step="0.01" class="form-input" value="<%= producto.price %>">
+                    <div id="priceError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.price) { %>
-                    <div class="text-danger">
-                        <%= errors.price.msg %>
-                    </div>
-                <% } %>
-
+            
                 <div class="campo">
                     <label for="description">Descripción:</label>
-                    <textarea id="description" name="descripcion" rows="4" class="form-input" ><%= producto.description %></textarea>
+                    <textarea id="description" name="descripcion" rows="4" class="form-input"><%= producto.description %></textarea>
+                    <div id="descripcionError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.descripcion) { %>
-                    <div class="text-danger">
-                        <%= errors.descripcion.msg %>
-                    </div>
-                <% } %>
-
+            
                 <div class="campo">
                     <label for="discount">Descuento:</label>
                     <input type="text" id="discount" name="discount" value="<%= producto.discount %>">
+                    <div id="discountError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.descuont) { %>
-                    <div class="text-danger">
-                        <%= errors.descuont.msg %>
-                    </div>
-                <% } %>
-
+            
                 <div class="campo">
                     <label for="image">Imagen:</label>
-                    <input type="file" id="image" name="img" accept="image/*" class="input-img" class="form-input" value="<%= producto.img %>">
+                    <input type="file" id="image" name="img" accept="image/*" class="input-img form-input" value="<%= producto.img %>">
+                    <div id="imgError" class="text-danger hidden"></div>
                 </div>
-                <% if (locals.errors && errors.img) { %>
-                    <div class="text-danger">
-                        <%= errors.img.msg %>
-                    </div>
-                <% } %>
-
-    
+            
                 <div class="botones">
                     <a href="/productos/catalogo"><button type="button" class="btn-cancelar">Cancelar</button></a>
                     <button class="btn-guardar" type="submit">Guardar</button>
                 </div>
             </form>
             
+            
         </div>
+        <script src="/js/validationEditProduct.js"></script> 
     </body>
 </html>
