--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,6 @@
 <footer>
         <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
         <h5>© Copyright todos los derechos reservados</h6>
-    </footer> 
+           
+</footer> 
+<script src="/js/header.js"></script>
