actualizo scripts de estructura y datos db, modifico detalles de formato vista catalogo

--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -32,8 +32,8 @@
                             </a>
                             <div class="main-article">
                                 <a href="#"> <i class="fas fa-truck"></i> </a>
-                                <p class="price"><%= productos[i].price %> </p>
-                                <p class="discount">%<%= productos[i].discount %> </p> 
+                                <p class="price">$<%= productos[i].price %> </p>
+                                <p class="discount"><%= productos[i].discount %>% </p> 
                                 <h4 class="description"><%= productos[i].title %></h4>
                             </div>
                         </article>
@@ -51,8 +51,8 @@
                             </a>
                             <div class="main-article">
                                 <a href="#"> <i class="fas fa-truck"></i> </a>
-                                <p class="price"><%= productos[i].price %> </p>
-                                <p class="discount">%<%= productos[i].discount %></p>
+                                <p class="price">$<%= productos[i].price %> </p>
+                                <p class="discount"><%= productos[i].discount %>%</p>
                                 <h4 class="description"><%= productos[i].title %></h4>
                             </div>
                         </article>
