--- a/public/css/catalogoProducto.css
+++ b/public/css/catalogoProducto.css
@@ -1,200 +1,158 @@
-/* catalogo */
-*{
-    margin: 0px;
-    padding: 0px;    
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-/*header
 
-header{
-    background-color: #f5c597;
-    padding: 10px;
-    border-bottom: solid 4px #d0b6b7;
-  }
-  
-  .redes{
-    position: absolute;
-    top: 15px;
-    left: 10px;
-  }
-  
-  header i{
-    color: #859bb2;
-    font-size: 20px;
-    margin-right: 7px;
-    border: #d0b6b7 solid 1px;
-    border-radius:30%;
-    padding: 4px;
-    box-shadow: 1px 2px 6px #859bb2;
-  }
-  
-  .nav-bar{
-    display: flex;
-    justify-content: center;
-  }
-  
-  .enlaces{
-    display: flex;
-    list-style-type: none;
-    margin-right: 20px;
-  }
-  
-  li{
-    margin-right: 10px;
-  }
-  .logo{
-    width: 190px;
-    height: 190px;
-    text-align: center;
-  }*/
-
-/*-----------------body----------*/
-
-body{
+body {
     font-family: 'Roboto', sans-serif;
     background-color: #ebebeb;
+    color: #333;
 }
 
-
-
-div.catalogo,
-div.offers{
-    display: flex;
-    flex-wrap: wrap;
-}
-.price{
-    font-size: 18px;
-    width: 30%;
-}
-
-.discount{
-    width: 70%;
-}
-
-.discount,
-.description{
-    font-size: 16px;
-    font-weight: normal;
-}
-
-h3,
-.description{
-    color: #666;
-}
-
-.description{
-    display: none;
-    margin-top: 20px;
-}
-
-
-
-main{
+main {
     width: 90%;
     margin: 0 auto;
 }
 
-main section article{
-    background-color: #fff;    
-    margin: 10px 0px;
+main section {
+    margin-top: 20px;
 }
 
-main section article img{
-    width: 100%;
-}
-
-main section article i,
-.discount{
-    color: #39b54a;
-}
-
-main section article i{
-    display: block;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #39b54a;
-    background-color: #FFF;
-    border-radius: 50%;
-    position: absolute;
-    right: 20px;
-    top: -15px;
-}
-
-main section h3{
-    margin: 20px 0px;
-}
-
-article div.main-article{
-    width: 100%;
+main section .products {
     display: flex;
     flex-wrap: wrap;
-    align-items: baseline;
-    border-top: 1px solid #ebebeb;
-    position: relative;
-    padding: 15px;
+    justify-content: space-between;
 }
 
-@media (min-width: 361px){
-    main section article .description{
+main section .products article {
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px 0;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 100%;
+    height: 450px; /* Aumentar la altura de la tarjeta */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main section .products article:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+main section .products article img {
+    width: 100%;
+    height: 250px; /* Aumentar la altura de la imagen */
+    object-fit: cover;
+}
+
+main section .products article .main-article {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+main section .products article h3 {
+    font-size: 20px;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+main section .products article .price {
+    font-size: 18px;
+    color: #39b54a;
+    font-weight: bold;
+}
+
+main section .products article .discount {
+    font-size: 16px;
+    color: #d9534f;
+    margin-bottom: 10px;
+}
+
+main section .products article .description {
+    font-size: 14px;
+    color: #999;
+    margin-top: 10px;
+    display: none; /* Por defecto, la descripción está oculta */
+}
+
+@media (min-width: 361px) {
+    main section .products article .description {
         display: block;
     }
 
-    main section article{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    main section .products {
+        justify-content: space-around;
     }
 
-    main section div.products{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-    
-    main section div.products article{
+    main section .products article {
         width: 45%;
+        height: 450px; /* Asegurarse de que la altura sea consistente */
     }
 
-    .price,
-    .discount{
-        width: 50%;
+    .price, .discount {
+        width: 100%;
     }
 }
 
-@media (min-width: 769px){
-    main section div.products article{
+@media (min-width: 361px) and (max-width: 789px) {
+    main section .products article .price,
+    main section .products article .discount,
+    main section .products article .description {
+        display: block; /* Mostrar el precio, descuento y descripción en dispositivos medianos */
+    }
+
+    main section .products {
+        justify-content: space-around;
+    }
+
+    main section .products article {
+        width: 45%;
+        height: 450px; /* Asegurarse de que la altura sea consistente */
+    }
+
+    .price, .discount {
+        width: 100%;
+    }
+}
+
+@media (min-width: 769px) {
+    main section .products article {
         width: 22%;
+        height: 450px; /* Asegurarse de que la altura sea consistente */
     }
 }
+
 /* --------------producto----------------- */
 
 body {
     margin: 0;
-    color: #000000;
     font-family: 'Lora', serif;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    line-height: 2;
-    /*background-color: #d0b6b7;*/
-    background-image: url(/img/HebraLibreFondo.jpg);
+    background-image: url('/img/HebraLibreFondo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .productos {
     display: flex;
-    flex-flow: column wrap;
-    text-align:center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
+
 .products_principal {
     display: flex;
-    justify-content:center; 
+    justify-content: center;
     margin-top: 20px;
-   
 }
+
 .contenido_producto {
     display: flex;
     flex-direction: column;
@@ -202,41 +160,38 @@ body {
     padding: 20px;
 }
 
-/* Estilo para la imagen principal */
-
 .products_principal img {
     width: 580px;
     height: 600px;
     cursor: pointer;
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
     padding: 5px;
-
 }
 
 .titulo {
     font-size: 24px;
     margin-top: 0;
     text-align: center;
-    
 }
 
-/* Estilo para el texto de descripción */
 .descrpcion_producto {
     max-width: 100%;
     font-size: 14px;
-    text-align: justify; 
-    font-family: "Lora, serif";
+    text-align: justify;
 }
 
-/* Estilo para las imágenes adicionales */
+.imagenes-adicionales {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 5px;
+}
 
 .imagenes-adicionales img {
     width: 30%;
-    height:auto;
     cursor: pointer;
-    margin: 5px; 
-    
-
+    margin: 5px;
 }
 
 .imgPrinc-carrito {
@@ -244,79 +199,52 @@ body {
     margin-top: 20px;
 }
 
-.icono-truck {
-    position: absolute;
-    top: 15px;
-    right: 10px; 
-    padding: 10px;
-    border-radius: 50%; 
-    border-color: green;
-    background-color: white; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-decoration: none;
-    border: 2px solid green;
-}
-
-.icono-truck i {
-    font-size: 25px; 
-    color: green; 
-    border: 5px;
-}
-
-@media (min-width: 361px) and (max-width: 789px){
+@media (min-width: 361px) and (max-width: 789px) {
     .products_principal img {
-        width: 100vw; 
-        max-width: 90vw;  
+        width: 100vw;
+        max-width: 90vw;
         height: auto;
-        cursor: pointer;
         margin-bottom: 1.5vw;
-        padding: 1vw 1vw;        
-    } 
-   .products_principal{
-    display : flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-content: center;
-   }
-   
-   .contenido_producto {
-    justify-content: center;
-    align-content: center;
-   }
-   .imagenes-adicionales{
-    display:flex;
-    flex-direction: row ;
-    justify-content: center;
-    align-content: center;
-    width: 100%;
-    max-width: 85%;
-    height:auto;
-    cursor: pointer;
-    margin: 5px;   
-   }
-   .descrpcion_producto {
-    font-size: 16px; 
+        padding: 1vw 1vw;
+    }
+
+    .products_principal {
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .contenido_producto {
+        justify-content: center;
+        align-content: center;
+    }
+
+    .imagenes-adicionales {
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        max-width: 85%;
+    }
+
+    .descrpcion_producto {
+        font-size: 16px;
+    }
 }
 
-}
-@media (min-width: 790px){
+@media (min-width: 790px) {
     .imagenes-adicionales {
-        display: flex;
-        justify-content: flex-start; 
+        justify-content: flex-start;
         align-items: flex-start;
         padding-left: 5px;
     }
+
     .imagenes-adicionales img {
-        width: 14%;    
-    }
-    .icono-truck {
-        top: 20px;
-        right: 20px; 
-      
+        width: 14%;
     }
 }
 
-/* Estilo para los botones */
+/* Botones */
 .botones {
     display: flex;
     flex-direction: column;
@@ -326,15 +254,15 @@ body {
 .editar-eliminar {
     display: flex;
     align-items: center;
-    gap: 10px; 
+    gap: 10px;
 }
 
 .agregar {
     display: inline-block;
     align-items: left;
 }
-.botones button,
-.botones a {
+
+.botones button, .botones a {
     display: inline-block;
     padding: 10px 20px;
     margin-top: 10px;
@@ -349,18 +277,15 @@ body {
     transition: background-color 0.3s;
     width: 200px;
     height: 50px;
-    }
+}
 
-.botones button:hover,
-.botones a:hover {
+.botones button:hover, .botones a:hover {
     background-color: #45a049;
     color: white;
 }
 
-/* Ajustes para los botones en dispositivos pequeños */
 @media screen and (max-width: 600px) {
-    .botones button,
-    .botones a {
+    .botones button, .botones a {
         width: 100%;
     }
 }
